# Force-Aware-Tool-Use-Planning

./: .gitignore  AGENTS.md  LICENSE  README.md  requirements.txt
.agents/skills/force-aware-tool-use/: PHASE1_INSTRUCTIONS.md  PHASE2_INSTRUCTIONS.md  PHASE3_INSTRUCTIONS.md  SKILL.md
configs/: demo_planar_arm.yaml  phase3_contact_execution.yaml
docs/: EXECUTABLES_AND_LAUNCH_FILES.md  PHASE3_CONTACT_EXECUTION.md  PROJECT_STATUS.md
ros2_ws/src/force_tool_planning_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/force_tool_planning_ros/config/: controllers.yaml  display.rviz  phase3_contact_execution.rviz
ros2_ws/src/force_tool_planning_ros/force_tool_planning_ros/: __init__.py  contact_execution_demo_node.py  contact_markers.py  demo_launch.py  joint_state_demo_node.py  marker_helpers.py  marker_publisher_node.py  result_adapter.py  summary_node.py  trajectory_helpers.py  trajectory_sender_node.py
ros2_ws/src/force_tool_planning_ros/launch/: baseline_demo.launch.py  control.launch.py  display.launch.py  phase2.launch.py  phase3_contact_execution.launch.py
ros2_ws/src/force_tool_planning_ros/test/: conftest.py  test_control_launch_configuration.py  test_controller_configuration.py  test_display_configuration.py  test_joint_state_demo.py  test_marker_helpers.py  test_marker_publisher_node.py  test_phase2_launch_configuration.py  test_phase3_contact_execution.py  test_result_adapter.py  test_ros2_control_description.py  test_summary_node.py  test_trajectory_helpers.py  test_trajectory_sender_node.py
ros2_ws/src/force_tool_planning_ros/urdf/: planar_tool_arm.urdf.xacro
scripts/: compare_phase3_controllers.py  generate_phase3_figures.py  run_baseline_vs_force_aware.py  run_phase1_planner.py  run_phase3_contact_demo.py  search_demo_scenario.py
src/force_tool_planning/: __init__.py  config.py  grasps.py  ik.py  jacobian.py  kinematics.py  planner.py  tasks.py  torque.py  transforms.py  visualization.py
src/force_tool_planning/analysis/: __init__.py  compare_execution.py  plot_contact_results.py
src/force_tool_planning/contact/: __init__.py  contact_metrics.py  contact_model.py  force_estimator.py  surface.py
tests/: conftest.py  test_compare_execution.py  test_config.py  test_contact_execution_sim.py  test_contact_execution_stepper.py  test_contact_metrics.py  test_contact_model.py  test_end_to_end.py  test_execution_result.py  test_force_aware_controller.py  test_force_estimator.py  test_grasps_tasks.py  test_ik.py  test_jacobian.py  test_kinematics.py  test_phase3_contact_demo_script.py  test_phase3_plot_contact_results.py  test_planner.py  test_position_controller.py  test_surface.py  test_torque_filter.py  test_transforms.py  test_visualization.py
(+7 files in other folders)
